--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ humanfriendly==10.0
 idna==3.6
 multidict==6.0.5
 pydsb==2.3.0
+python-dotenv==1.0.1
 PyYAML==6.0.1
 requests==2.31.0
 soupsieve==2.5
