--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,6 @@
-dsb_username: { username }
-dsb_password: { password }
+DSB_USERNAME = "op://Private/DSBmobile/username"
+DSB_PASSWORD = "op://Private/DSBmobile/password"
+
+# usage:
+# DSB_USERNAME = { username }
+# DSB_PASSWORD = { password }
