--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,4 @@ jobs:
         pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py' | grep -v 'Archive/') --disable duplicate-code
+        pylint --fail-under=7.0 $(git ls-files '*.py' | grep -v 'Archive/') --disable duplicate-code --recursive=y --enable=W
