--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
+aiohappyeyeballs==2.4.0
 aiohttp==3.10.2
 aiosignal==1.3.1
 attrs==23.2.0
 beautifulsoup4==4.12.3
+blinker==1.8.2
 bs4==0.0.2
-certifi==2024.2.2
+certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
 coloredlogs==15.0.1
+Flask==3.0.3
 frozenlist==1.4.1
 humanfriendly==10.0
-idna==3.6
+idna==3.8
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+MarkupSafe==2.1.5
 multidict==6.0.5
 pydsb==2.3.0
 python-dotenv==1.0.1
 PyYAML==6.0.1
-requests==2.31.0
+referencing==0.35.1
+requests==2.32.3
+rpds-py==0.20.0
 soupsieve==2.5
-urllib3==2.2.1
+urllib3==2.2.2
+Werkzeug==3.0.4
 yarl==1.9.4
-jsonschema==4.23.0
