✨ feat(logger, args): added pretty -h helppage as well as changed format for weekdays from {i}_weekday to {date}_weekday

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,18 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
 multidict==6.0.5
 pydsb==2.3.0
+Pygments==2.18.0
 python-dotenv==1.0.1
 PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
+rich==13.8.0
+rich-argparse==1.5.2
 rpds-py==0.20.0
 soupsieve==2.5
 urllib3==2.2.2
