✨ feat(auth): added some basic auth functioning

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ charset-normalizer==3.3.2
 click==8.1.7
 coloredlogs==15.0.1
 Flask==3.0.3
-Flask-Cors==5.0.0
 frozenlist==1.4.1
 humanfriendly==10.0
 idna==3.8
@@ -31,6 +30,7 @@ requests==2.32.3
 rich==13.8.0
 rich-argparse==1.5.2
 rpds-py==0.20.0
+schedule==1.2.2
 soupsieve==2.5
 urllib3==2.2.2
 Werkzeug==3.0.4
