--- a/docker-fullstack/compose.yaml
+++ b/docker-fullstack/compose.yaml
@@ -2,6 +2,8 @@ services:
   dsb-frontend:
     container_name: dsb-frontend
     image: ghcr.io/prtmphlp/dsb-frontend:latest
+    restart: unless-stopped
+    profiles: ["dsb"]
     #build: .
     environment:
       #- NEXT_PUBLIC_API_URL=https://api.home.pertermann.de
@@ -22,6 +24,7 @@ services:
     build: ..
     container_name: dsb-scraper
     restart: unless-stopped
+    profiles: ["dsb"]
     ports:
       - "5555:5555"
     environment:
