🐞 fix(CORS): trying to fix CORS bc of Safari being picky

--- a/compose.yaml
+++ b/compose.yaml
@@ -23,6 +23,9 @@ services:
     build: .
     container_name: dsb-scraper
     restart: unless-stopped
+    logging:
+      options:
+        max-size: 50m
     ports:
       - "5555:5555"
     environment:
@@ -52,3 +55,4 @@ volumes:
 networks:
   proxy:
     external: true
+
