🐞 fix(compose.yaml): update NEXT_PUBLIC_API_URL to use environment variable

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,8 +5,7 @@ services:
     restart: unless-stopped
     #build: ../frontend/
     environment:
-      #- NEXT_PUBLIC_API_URL=https://api.home.pertermann.de
-      - NEXT_PUBLIC_API_URL=http://localhost:5555
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
     ports:
       - 3003:3000
 
