small docker changes

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
     container_name: dsb-frontend
     image: ghcr.io/prtmphlp/dsb-frontend:latest
     restart: unless-stopped
-    # build: ../frontend/
+    build: ../frontend
     depends_on:
       dsb-scraper:
         condition: service_healthy
