✨ feat(app): load API credentials from .env with fallback and update .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,14 @@
-# DSB_USERNAME = { username }
-# DSB_PASSWORD = { password }
+# API Authentication Credentials
+# Copy this file to .env and update with your actual credentials
+
+# API Username and Password for the Flask application
+API_USERNAME = { username }
+API_PASSWORD = { password }
+
+# DSB Mobile Credentials (for main.py scraper)
+DSB_USERNAME = { your_dsb_username }
+DSB_PASSWORD = { your_dsb_password }
+
+# JWT Secret Key (change for production)
+JWT_SECRET_KEY = { your_jwt_secret_key }
+NEXT_PUBLIC_API_URL = "http://localhost:5555"
