--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -82,36 +82,13 @@ jobs:
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
 
-  deploy:
+  notify-webhook:
     needs: build-and-push-image
     runs-on: ubuntu-latest
     steps:
       - name: Call deployment webhook
-        env:
-          WEBHOOK_BASIC_AUTH: ${{ secrets.WEBHOOK_BASIC_AUTH }}
-          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
         run: |
-          # Mask secrets in logs
-          echo "::add-mask::$WEBHOOK_BASIC_AUTH"
-          echo "::add-mask::$WEBHOOK_URL"
-
-          # Trim any accidental newlines from secrets
-          TRIMMED_AUTH=$(printf %s "$WEBHOOK_BASIC_AUTH" | tr -d '\r\n')
-          TRIMMED_URL=$(printf %s "$WEBHOOK_URL" | tr -d '\r\n')
-
-          # Build Authorization header explicitly (Basic base64(user:pass))
-          AUTH_B64=$(printf %s "$TRIMMED_AUTH" | base64 | tr -d '\r\n')
-
-          # Call webhook without printing response or progress; retry a few transient failures
-          curl -fsSL -X POST \
-            -H "Authorization: Basic $AUTH_B64" \
-            -H 'Content-Type: application/json' \
-            -H 'Accept: application/json' \
-            -A 'GitHubActionsWebhook/1.0' \
-            --retry 3 --retry-delay 2 --retry-connrefused --max-time 20 \
-            -d '{"repository":"${{ github.repository }}","workflow":"${{ github.workflow }}","run_id":"${{ github.run_id }}","status":"${{ needs.build-and-push-image.result }}","sha":"${{ github.sha }}","ref":"${{ github.ref }}"}' \
-            "$TRIMMED_URL" \
-            --output /dev/null || true
+          curl https://ci.pertermann.de/api/integrations/tonb7g4khts5nxrw || true
 
   # deploy:
   #   needs: build-and-push-image
