--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -87,11 +87,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Call deployment webhook
+        env:
+          WEBHOOK_BASIC_AUTH: ${{ secrets.WEBHOOK_BASIC_AUTH }}
+          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
         run: |
-          curl -H "User-Agent: Mozilla/5.0 (compatible; GitHub-Actions)" \
+          echo "::add-mask::$WEBHOOK_BASIC_AUTH"
+          echo "::add-mask::$WEBHOOK_URL"
+          curl -u "$WEBHOOK_BASIC_AUTH" \
+               -H "User-Agent: Mozilla/5.0 (compatible; GitHub-Actions)" \
                -H "Accept: */*" \
                --silent --show-error --fail --max-time 30 \
-               https://ci.pertermann.de/api/integrations/tonb7g4khts5nxrw || true
+               "$WEBHOOK_URL" || true
 
   # deploy:
   #   needs: build-and-push-image
